[package]
name = "balancebeam"
version = "0.1.0"
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["derive"] }
httparse = "1.4"
http = "0.2"
log = "0.4"
env_logger = "0.7"
pretty_env_logger = "0.4"
threadpool = "1.8"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
parking_lot = "0.11"
error-chain = "0.12"

[dev-dependencies]
nix = "0.17"
hyper = { version = "0.14", features = ["full"] }
reqwest = "0.11"
async-trait = "0.1"
